Import and analyse application permission management json file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     </string-array>
     <string name="button_hook_setting">Button Hook Setting</string>
     <string name="sumarry_report">Summary Report</string>
+    <string name="config_file">Import Config File</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
